--- a/front/build.gradle
+++ b/front/build.gradle
@@ -26,13 +26,14 @@ repositories {
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-actuator')
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+//    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-data-rest')
     implementation('org.springframework.boot:spring-boot-starter-security')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-web-services')
     implementation('org.springframework.data:spring-data-rest-hal-browser')
     compileOnly('org.projectlombok:lombok')
+    compileOnly ("org.springframework.boot:spring-boot-configuration-processor")
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.springframework.security:spring-security-test')
 }
