--- a/client/build.gradle
+++ b/client/build.gradle
@@ -23,6 +23,15 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    springCloudVersion = 'Finchley.SR2'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
@@ -30,12 +39,14 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-rest')
     compile('org.springframework.boot:spring-boot-starter-jdbc')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.data:spring-data-rest-hal-browser')
+    compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
+    // enabled eureka client to manage api msa with eureka
     compile('org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16')
     compileOnly('org.projectlombok:lombok')
     runtimeOnly('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
-//    compile('org.springframework.boot:spring-boot-starter-security')
 //    compile('org.springframework.security.oauth:spring-security-oauth2:2.2.1.RELEASE')
 //    testCompile('org.springframework.security:spring-security-test')
