--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -4,3 +4,12 @@ server:
 spring:
   profiles:
     active: localdev
+  application:
+    name: client
+
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
