--- a/jwtauth/src/main/resources/application.yml
+++ b/jwtauth/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 server:
   port: 8080
 
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
 spring:
   profiles:
     active: localdev
+  application:
+    name: jwtauth
