--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -3,3 +3,12 @@ server:
 spring:
   profiles:
     active: localdev
+  application:
+    name: user
+
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
