--- a/eurekaserver/build.gradle
+++ b/eurekaserver/build.gradle
@@ -1,12 +1,15 @@
 buildscript {
     ext {
         springBootVersion = '2.0.6.RELEASE'
+        gradleDockerVersion = '0.20.1'
     }
     repositories {
         mavenCentral()
+        maven{url "https://plugins.gradle.org/m2/"}
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("gradle.plugin.com.palantir.gradle.docker:gradle-docker:${gradleDockerVersion}")
     }
 }
 
@@ -14,6 +17,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.palantir.docker'
 
 group = 'com.example.demo'
 version = '0.0.1-SNAPSHOT'
@@ -21,6 +25,16 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url "https://repo.spring.io/milestone" }
+}
+
+bootJar {
+    baseName = 'eurekaserver'
+    version = 'latest'
+}
+
+docker{
+    name "jkyoo11/${bootJar.baseName}:${bootJar.version}"
 }
 
 ext {
