--- a/jwtauth/build.gradle
+++ b/jwtauth/build.gradle
@@ -30,7 +30,7 @@ repositories {
 
 bootJar {
     baseName = 'jwtauth'
-    version = 'latest'
+    version = version
 }
 
 docker{
@@ -59,7 +59,7 @@ dependencies {
 //    compile('org.springframework.cloud:spring-cloud-starter-config')
     compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
     compile('org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16')
-    compile('org.springframework.security.oauth:spring-security-oauth2:2.2.1.RELEASE')
+    compile('org.springframework.security.oauth:spring-security-oauth2:2.3.1.RELEASE')
     compile('org.springframework.security:spring-security-jwt:1.0.9.RELEASE')
     runtimeOnly('mysql:mysql-connector-java')
     compileOnly('org.projectlombok:lombok')
