--- a/eurekaserver/build.gradle
+++ b/eurekaserver/build.gradle
@@ -30,7 +30,7 @@ repositories {
 
 bootJar {
     baseName = 'eurekaserver'
-    version = 'latest'
+    version = version
 }
 
 docker{
@@ -45,6 +45,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-server')
     compile("org.springframework.boot:spring-boot-configuration-processor")
+    compile('org.springframework.cloud:spring-cloud-starter-config')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
 }
